--- a/src/components/formulario/Familiar.css
+++ b/src/components/formulario/Familiar.css
@@ -14,6 +14,27 @@
   padding-bottom: 10%;
 }
 
+.Pantalla {
+  background-color: #FFFF;
+  display: flex;
+  flex-direction: column;
+  font-size: calc(10px + 2vmin);
+  color: black;
+  position: relative;
+  margin: 30px 2%;
+}
+
+.App-header1 {
+  background-color: #FFFF;
+  margin: 20px 13%;
+  display: flex;
+  flex-direction: column;
+  font-size: calc(10px + 2vmin);
+  color: black;
+  position: relative;
+
+}
+
 .background1 {
   border-right: 30px solid transparent;
   border-top: 100px solid #333;
@@ -95,7 +116,16 @@
   color: #fff;
 }
 
-
+.btn1-style{
+  background-color: #587328 !important;
+  color: white !important;
+  margin-top: 40px
+}
+.btn2-style{
+  background-color: #587328 !important;
+  color: white !important;
+  margin-bottom: 10px
+}
 .page-title {
   color: #394b1a;
   margin-top: 20px;
@@ -121,6 +151,8 @@
   color: #394b1a;
   border: 1px solid #d3d4c2;
   border-radius: 7px;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 
 .form-control {
