--- a/src/components/forms/general.css
+++ b/src/components/forms/general.css
@@ -69,6 +69,20 @@
 p.text{
   text-align: center;
 }
+.progress-bar {
+  position: relative;
+  height: 10px;
+  width: inherit;
+  border-radius: 50px;
+}
+
+.filler {
+  background: #1DA598;
+  height: 100%;
+  border-radius: inherit;
+  transition: width .2s ease-in;
+}
+
 
 
   /*.padding-h{
