--- a/src/components/Inscription/general.css
+++ b/src/components/Inscription/general.css
@@ -74,7 +74,19 @@
 p.text{
   text-align: center;
 }
+.progress-bar {
+  position: relative;
+  height: 10px;
+  width: inherit;
+  border-radius: 50px;
+}
 
+.filler {
+  background: #1DA598;
+  height: 100%;
+  border-radius: inherit;
+  transition: width .2s ease-in;
+}
 
   /*.padding-h{
     padding-right: 0px !important;
