--- a/src/components/profile/perfil.css
+++ b/src/components/profile/perfil.css
@@ -116,6 +116,13 @@ hr {
   margin-top: 100px;
   margin-bottom: 0;
 }
+.inputedit{
+    border:none;
+    border-bottom: 1px solid lightgray;
+}
+.blue_link{
+    color:blue;
+}
 
 @media only screen and (max-width: 575px) {
 .background1{
