--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -102,10 +102,11 @@
       min-height: 50px;
       margin-bottom: 20px;
       border: 1px solid transparent;
+      min-width: 2000px;
   }
-
-  .row2 {
-    width: 100%;
+  
+  .navbar-default .navbar-collapse, .navbar-default .navbar-form {
+      border-color: #e6e6e6;
   }
   
   .container {
@@ -114,6 +115,33 @@
       padding-left: 15px;
       margin-right: auto;
       margin-left: auto;
+  }
+  
+  .navbar-collapse.collapse {
+      display: block !important;
+      height: auto !important;
+      padding-bottom: 0;
+      overflow: visible !important;
+  }
+  
+  
+  .ournav .container .nav li a {
+      color: #fff;
+  }
+  
+  
+  
+  .ourcollapse ul li:first-child {
+      border-left: none;
+  }
+  .ourcollapse ul li {
+      border-right: 1px solid #798f54;
+      border-left: 1px solid #394b1a;
+  }
+  .navbar-nav2 {
+      display: inline;
+      padding-left: 0;
+      list-style: none;
   }
   
   #Inicio {
@@ -139,17 +167,16 @@
   
   #Nombre{
       color: #FFFF;
-      padding: 8px 0px;
-      padding-left: 10px;
+      padding-right: 35px;
+      padding-left: 350px;
+  
   }
   
   #Salir{
-      padding: 8px 0px;
-      padding-left: 10px;      
+      padding-left: 25px;
       border-right: none;
   }
-
- 
+  
   .services {
       border-radius: 5px;
       background: #e9e9d7;
@@ -212,9 +239,7 @@
     margin-left: 70px;}
   
   .styleImg2{
-    display: flex;
-    margin: auto;
-  }
+      display: flex; }
   
   .style{
     text-align: center;
@@ -288,10 +313,6 @@
   .painted {
     font-weight: bold;
   } 
-
-  .navbar a {
-    color: white !important;
-  }
   
   @media only screen and (max-width: 575px) {
   .background1{
